<resources>
    <string name="app_name">MyPlantDiary</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="zeropointzero">0.0</string>
    <string name="plantName">Plant Name</string>
    <string name="description">Description</string>
    <string name="datePlanted">Date Planted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eventType">Event Type</string>
    <string name="quantity">Quantity</string>
    <string name="units">Units (Gallons, Cups, etc.)</string>
    <string name="eventDate">Event Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="common_name">Common Name</string>
    <string name="genus">Genus</string>
    <string name="species">Species</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
